[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aleph-nodes-list"
version = "0.0.1"
description = "List all nodes on their details"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Olivier Le Thanh Duong", email = "olivier@lethanh.be"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "aiohttp",
]


[tool.hatch.build.targets.sdist]
include = ["src/**"]

[tool.hatch.build.targets.wheel]
include = ["src/**"]


[tool.hatch.envs.default.scripts]
#serve="python -m aiohttp.web -P 8081 src.nodes_list.main:init_app"
serve="uvicorn src.nodes_list.main:app --reload"

[tool.hatch.envs.testing]
type = "virtual"
dependencies = [
  "pytest==8.2.1",
  "pytest-cov==5.0.0",
#  "pytest-mock==3.14.0",
  "pytest-asyncio==0.23.7",
#  "pytest-aiohttp==1.0.5",
  "aioresponses==0.7.7",
    "httpx"
]
[tool.hatch.envs.testing.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --durations=10 --cov  {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
]


[tool.hatch.envs.linting]
#detached = true
dependencies = [
  "mypy==1.13.0",
]
[tool.hatch.envs.linting.scripts]
typing = "mypy  --config-file=pyproject.toml  {args:src/}"
all = [
    "typing"
]

#[tool.hatch.envs.deployment]
#detached = true
#dependencies = [
#  "aleph-client==1.3.0",
#  "aleph-sdk-python==1.2.1",
#]
#[tool.hatch.envs.deployment.scripts]
#deploy = "python ./deploy.py"
#update = "aleph program update aleph program update $ITEM_HASH nodes_list:app"

[tool.mypy]
python_version = "3.12"
install_types = true
non_interactive = true
explicit_package_bases = true
check_untyped_defs = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.coverage.report]
fail_under = 50

[tool.coverage.paths]
tests = ["tests", "src/nodes_list"]

[tool.coverage.run]
omit = [
  "deploy.py"
]
